# oz-ah6-data-analysis

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  requirements.txt
course/: overview.html
course/day01/assignments/: 1일차_Pandas기초와실습_실습과제.ipynb
course/day01/notebooks/: 1일차_Pandas기초와실습.ipynb  1일차_데이터 타입의 이해.ipynb  1일차_데이터 타입의 이해_v1.ipynb  1일차_데이터 타입의 이해_v2.ipynb
course/day02/assignments/: 2일차_탐색적_데이터분석(EDA)_실습문제.ipynb
course/day02/notebooks/: 2일차_탐색적_데이터분석(EDA).ipynb  2일차_탐색적_데이터분석(EDA)_v1.ipynb  2일차_탐색적_데이터분석(EDA)_v2.ipynb
course/day03/assignments/: 3일차_데이터전처리_실습과제.ipynb
course/day03/notebooks/: 3일차_데이터시각화.ipynb  3일차_데이터전처리.ipynb
resources/curriculum/: 2605_AH6_강의운영표_Colab전환.csv  2605_AH6_강의운영표_Colab전환.xlsx  [AI 헬스케어 6기] 커리큘럼 상세 정리 (정현우 강사님).xlsx
resources/slides/: 데이터 분석 시작하기.pptx
